--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   /* theme colors */
   --navy: #0a192f;
   --dark-navy: #020c1b;
-  --light-navy: #112240;
+  --light-navy: #0a192f;
   --lightest-navy: #233554;
   --navy-shadow: rgba(2, 12, 27, 0.7);
   /* grey colors */
@@ -190,7 +190,7 @@ body {
   min-height: 100%;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
-  background-color: var(--navy);
+  /* background-color: var(--navy); */
   color: var(--slate);
   font-family: var(--font-sans);
   font-size: var(--font-xl);
@@ -213,7 +213,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  background-color: rgba(10, 25, 47, 0.85);
+  background-color: #0a192f;
   transform: translateY(0%);
   /* opacity: 0; */
   transition: all 0.5s ease-out, opacity 0.5s;
@@ -257,7 +257,7 @@ nav.nav {
   width: min(75vw, 290px);
   height: 100vh;
   outline: 0px;
-  background-color: var(--light-navy);
+  background-color: #8892b0;
   box-shadow: -10px 0px 30px -15px var(--navy-shadow);
   transform: translateX(100%);
   opacity: 0;
@@ -293,7 +293,7 @@ nav.nav ul {
 }
 nav.nav ul a {
   padding: 10px;
-  color: var(--lightest-slate);
+  color: #8892b0;
   text-decoration: none;
 }
 nav.nav ul a:before {
@@ -340,6 +340,7 @@ a.resume-button {
   display: inline-block;
   width: 40px;
   height: 40px;
+  color: var(--primary);
 }
 .left-side ul li:last-of-type {
   margin-bottom: 20px;
@@ -370,6 +371,7 @@ a.resume-button {
   letter-spacing: 0.1em;
   -webkit-writing-mode: vertical-rl;
   writing-mode: vertical-rl;
+  color: var(--primary);
 }
 .right-side {
   display: none;
@@ -401,7 +403,7 @@ section {
   -webkit-box-align: center;
   flex-direction: column;
   align-items: flex-start;
-  min-height: 100vh;
+  min-height: 75vh;
   padding: 0px;
   padding-bottom: 10vh;
   margin-top: 20vh;
@@ -1182,7 +1184,7 @@ button.cancel span::after {
   }
   .tab-list button.active {
     border-bottom: 0;
-    border-left: 2px solid var(--primary);
+    /* border-left: 2px solid var(--primary); */
     color: var(--primary);
     margin-left: -2px;
   }
