--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ nav.nav {
   width: min(75vw, 290px);
   height: 100vh;
   outline: 0px;
-  background-color: #8892b0;
+  background-color: #0a192f;
   box-shadow: -10px 0px 30px -15px var(--navy-shadow);
   transform: translateX(100%);
   opacity: 0;
@@ -265,7 +265,7 @@ nav.nav {
 }
 nav.nav.isShow {
   transform: translateX(0);
-  opacity: 1;
+  opacity: 2;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -278,6 +278,7 @@ nav.nav.isShow ul {
 }
 nav.nav.isShow a {
   display: inline-block;
+  color: #fff;
 }
 nav.nav.isShow a::before {
   display: block;
